--- a/assignment_8/package.json
+++ b/assignment_8/package.json
@@ -9,6 +9,7 @@
     "aos": "^3.0.0-beta.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
