--- a/assignment_8/package.json
+++ b/assignment_8/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "aos": "^3.0.0-beta.6",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
     "react-router": "^5.2.0",
